--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@ table{
 
     font-weight: bold;
 }
-#inp{
+.inp{
 
     border: none;
     text-align: center;
     font-size: 20px;
 }
-#inp:focus{
+.inp:focus{
 
     outline: none;
 }
@@ -51,7 +51,7 @@ table{
     border-bottom: 2px solid rgb(194, 196, 199);
     width: 300px;
 }
-#dltbtn, #editbtn, #add, #dlt{
+.dltbtn, .editbtn, #add, #dlt{
 
     padding-left: 10px;
     padding-right: 10px;
@@ -64,7 +64,7 @@ table{
     border-radius: 5px;
 }
 
-#dltbtn:hover , #editbtn:hover, #add:hover, #dlt:hover{
+.dltbtn:hover , .editbtn:hover, #add:hover, #dlt:hover{
 
     background-color: rgb(119, 136, 153);
     color: black;
@@ -76,13 +76,13 @@ ul{
     padding: 0px;
 }
 
-#editbtn:disabled{
+.editbtn:disabled{
 
     color: black;
 }
 @media only screen and (max-width : 500px){
 
-    #dltbtn, #editbtn, #add, #dlt{
+    .dltbtn, .editbtn, #add, #dlt{
         
         font-size: 10px ;
     }
